--- a/ng-alain/src/app/home/index.component.html
+++ b/ng-alain/src/app/home/index.component.html
@@ -1,7 +1,7 @@
 <div class="content__title">
     <h1>
-        Dashboard
-        <small class="text-sm hidden-xs">Welcome !</small>
+        {{ 'homeindex.title' | translate }}
+        <small class="text-sm hidden-xs">{{ 'homeindex.welcome' | translate }}</small>
     </h1>
 </div>
 <div class="quick-menu" [class.show]="quickMenu" (click)="quickMenu=!quickMenu">
