--- a/ng-alain/src/app/admin/roles/roles.component.html
+++ b/ng-alain/src/app/admin/roles/roles.component.html
@@ -2,7 +2,7 @@
 <nz-card [nzBordered]="false">
     <div nz-row [nzGutter]="24">
         <div nz-col [nzSpan]="8" class="mb-md" [class.text-right]="'true'">
-            <button nz-button [nzType]="'primary'" [nzSize]="'large'">
+            <button nz-button [nzType]="'primary'" (click)="createRole()" [nzSize]="'large'">
                 <i class="anticon anticon-plus"></i>
                 <span>新建</span>
             </button>
@@ -30,9 +30,10 @@
                 <td nz-td>
                     <a >编辑</a>
                     <span nz-table-divider></span>
-                    <a (click)="msg.success('删除' + user.id)">删除</a>
+                    <a (click)="msg.success('删除' + role.id)">删除</a>
                 </td>
             </tr>
         </tbody>
     </nz-table>
 </nz-card>
+<create-role-modal #createRoleModal (modalSave)="refresh()"></create-role-modal>
